--- a/form-and-listing/src/assets/styles/Footer.css
+++ b/form-and-listing/src/assets/styles/Footer.css
@@ -16,3 +16,9 @@ a:hover {
 a:active {
     color: #5cb85c;
 }
+
+.footer-section {
+    position: fixed; /* Set the navbar to fixed position */
+    bottom: 0; /* Position the navbar at the bottom of the page */
+    width: 100%; /* Full width */
+}
